2008-07-21  Armin Burgmeier  <armin@openismus.com>

	* glom/main.cc: #ifdef out the atexit() call on Windows since
	__libc_freeres() is not available there.

2008-07-20  Armin Burgmeier  <armin@openismus.com>

	* glom/application.cc (offer_new_or_existing): Fixed the
	non-client-only build. There was a default: marker in a switch
	statement with no code after it.

2008-07-20  Armin Burgmeier  <armin@openismus.com>

	* glom/libglom/connectionpool.cc: Windows build fix: winsock2.h
	somehow includes a file that defines a structure called DATADIR, but
	DATADIR is a define glom uses, which breaks the build. Fixed by
	#undefining DATADIR for that include.

2008-07-20  Armin Burgmeier  <armin@openismus.com>

	* glom/Makefile.am: Added glom.rc to the distribution, which is
	required to build Glom on Windows.

2008-07-19  Johannes Schmid  <johannes.schmid@openismus.com>

	* glom/dialog_existing_or_new.cc:
	* glom/dialog_existing_or_new.h:
	Don't show "Create database" tab for client only mode

2008-07-17  Johannes Schmid  <johannes.schmid@openismus.com>

	* glom/application.cc:
	* glom/application.h:
	* glom/frame_glom.cc:
	* glom/frame_glom.h:
	* glom/layout_item_dialogs/dialog_buttonscript.h:
	* glom/mode_data/box_data_calendar_related.cc:
	* glom/mode_data/box_data_details.cc:
	* glom/mode_data/flowtablewithfields.cc:
	* glom/mode_data/flowtablewithfields.h:
	* glom/utility_widgets/buttonglom.cc:
	* glom/utility_widgets/buttonglom.h:
	* glom/utility_widgets/labelglom.cc:
	* glom/utility_widgets/labelglom.h:
	* glom/utility_widgets/layoutwidgetbase.cc:
	* glom/utility_widgets/layoutwidgetutils.cc:
	* glom/utility_widgets/layoutwidgetutils.h:
	* glom/utility_widgets/notebookglom.cc:
	Fixed build with GLOM_ENABLE_CLIENT_ONLY

	* glom/main.cc:
	Allow to pass arguments to Gtk+ like --g-fatal-warnings. Glom did filter those
	as invalid arguments before

1.7.1:

2008-06-23  Murray Cumming  <murrayc@murrayc.com>
