@@ -1,3 +1,12 @@
+2008-07-23  Armin Burgmeier  <armin@openismus.com>
+
+	* glom/glom.glade: Removed the image from the Select button in the
+	initial dialog.
+
+	* glom/dialog_existing_or_new.cc: Add the image in the Code, via
+	Gtk::Button::set_image. This way the image is not shown when the theme
+	doesn't show images on buttons, such as the MS-Windows theme.
+
 2008-07-21  Armin Burgmeier  <armin@openismus.com>
 
 	* glom/main.cc: #ifdef out the atexit() call on Windows since
